...
"Unknown Error" = "Unknown Error";
"Error cleaning cache." = "Error cleaning cache.";

"No Updates Available" = "No Updates Available";
"There are no updates available for Popcorn Time at this time." = "There are no updates available for Popcorn Time at this time.";

"Select a filter to sort by" = "Select a filter to sort by";
"Select a genre to filter by" = "Select a genre to filter by";

"Mirroring route detected" = "Mirroring route detected";
"Would you like to mirror current display to device?" = "Would you like to mirror current display to device?";

"Maybe Later" = "Maybe Later";
...
"OK" = "OK";
"Sideloading Instructions" = "Sideloading Instructions";
"Unfortunately, in-app updates are not available for un-jailbroken devices. Please follow the sideloading instructions available in the PopcornTimeTV repo's wiki." = "Unfortunately, in-app updates are not available for un-jailbroken devices. Please follow the sideloading instructions available in the PopcornTimeTV repo's wiki.";

"Popular" = "Popular";
"New" = "New";
"Recently Added" = "Recently Added";
"Top Rated" = "Top Rated";
"Trending" = "Trending";

"All" = "All";
"Action" = "Action";
"Adventure" = "Adventure";
...
