...
        
        var xml = "<grid>" + "\n"
        xml +=     "<header>" + "\n"
        xml +=      "<row>" + "\n"
        xml +=          "<title style=\"tv-align: left;\">\(titleString) Movies</title>" + "\n"
        xml +=          "<buttonLockup style=\"tv-align: right; margin: 0  20;\" actionID=\"showMovieFilters»\(currentFilter.rawValue)\">" + "\n"
        xml +=              "<text>Sort</text>" + "\n"
        xml +=          "</buttonLockup>" + "\n"
        xml +=          "<buttonLockup style=\"tv-align: right;\" actionID=\"showMovieGenres»\(currentGenre.rawValue)\">" + "\n"
        xml +=              "<text>Genre</text>" + "\n"
        xml +=          "</buttonLockup>" + "\n"
        xml +=      "</row>" + "\n"
        xml +=  "</header>" + "\n"
...
